# RUST_PROGETTI

./: .gitignore  APRI_FILE_(RUST_PROGETTI_ TUTORIAL).bat  APRI_FILE_(RUST_TUTORIAL).bat  Cargo.toml  README.md  RUST_Progetti_GIT_ARCHIVIA_TUTTO_FILE_(ATTIVA_inCartellaGit).bat  Rust_Progetti_Archiviazione.bat  Rust_Progetti_Lista.lst
Capitolo_01/: APRI_FILE_{HelloWord_eseguibile}.bat
Capitolo_01/call_exe/: Cargo.toml
Capitolo_01/call_exe/src/: lib.rs
Capitolo_01/hello_world/: main.rs
Capitolo_02/guessing_game/: Cargo.toml
Capitolo_02/guessing_game/src/: lib.rs  main.rs
Capitolo_03/branches/src/: lib.rs  main.rs
Capitolo_03/data_type/src/: lib.rs  main.rs
Capitolo_03/function/src/: lib.rs  main.rs
Capitolo_03/progetto_loop/: Cargo.toml
Capitolo_03/progetto_loop/src/: lib.rs  main.rs
Capitolo_03/variables_and_mutability/src/: lib.rs  main.rs
Capitolo_04/dangle/src/: lib.rs  main.rs
Capitolo_04/ownership/src/: lib.rs  main.rs
Capitolo_04/references_and_borrowing/src/: lib.rs  main.rs
Capitolo_04/the_slice_type/src/: esempio_4.rs  esempio_5.rs  esempio_6.rs  esempio_7_slices.rs  lib.rs  main.rs
Capitolo_05/can_old/: Cargo.toml
Capitolo_05/can_old/src/: lib.rs  main.rs
Capitolo_05/defining_methods/src/: lib.rs  main.rs
Capitolo_05/format_debug/: Cargo.toml
Capitolo_05/format_debug/src/: lib.rs  main.rs
Capitolo_05/multiple_impl_blocks/src/: lib.rs  main.rs
Capitolo_05/operator_c/: Cargo.toml
Capitolo_05/operator_c/src/: lib.rs  main.rs
Capitolo_05/ownership/src/: main.rs
Capitolo_05/ownership_2/src/: lib.rs
Capitolo_05/rettangolo/: Cargo.toml
Capitolo_05/rettangolo/src/: funzioni_calcolo_rettangolo.rs  lib.rs  main.rs  rettangolo.rs
Capitolo_05/struct_struttura/: Cargo.toml
Capitolo_05/struct_struttura/src/: esempio_5_1_02.rs  esempio_struttura.rs  lib.rs  main.rs
Capitolo_06/bind_values/: Cargo.toml
Capitolo_06/bind_values/src/: lib.rs
Capitolo_06/catch_all/src/: lib.rs
Capitolo_06/config_max/src/: lib.rs  main.rs
Capitolo_06/control_flow/src/: lib.rs
Capitolo_06/dice_roll/: Cargo.toml
Capitolo_06/dice_roll/src/: lib.rs
Capitolo_06/dice_roll_2/: Cargo.toml
Capitolo_06/dice_roll_2/src/: lib.rs
Capitolo_07/front_house/front_of_house/: Cargo.toml
Capitolo_07/new_front_house/: Cargo.toml
Capitolo_07/new_front_house/src/: lib.rs
Capitolo_07/restaurant/src/: lib.rs
Capitolo_10_GUI/: windows_gui_readme.md
Capitolo_10_GUI/01_windows_derive/windows_derive/: Cargo.toml
Capitolo_10_GUI/01_windows_derive/windows_derive/src/: main.rs
Capitolo_10_GUI/02_barebone/barebone/: Cargo.toml
Capitolo_10_GUI/02_barebone/barebone/src/: main.rs
Capitolo_10_GUI/02_barebone/native_barebone/: Cargo.toml
Capitolo_10_GUI/02_barebone/native_barebone/src/: main.rs
Capitolo_10_GUI/10_Cmb_Mod/: Cmb_Analisi_UML.mdj
Capitolo_10_GUI/10_Cmb_Mod/cmb_mod/: Cargo.toml
Capitolo_10_GUI/10_Cmb_Mod/cmb_mod/src/: alternate.rs  main.rs
Capitolo_10_GUI/10_Cmb_Progetti/new_progetti_rust/: main.rs
Capitolo_10_GUI/10_Cmb_Progetti/nw_progetto_rust/: Cargo.toml
Capitolo_10_GUI/10_Cmb_Progetti/nw_progetto_rust/analisi/: NwProgettoRust_Analisi_UML.mdj
Capitolo_10_GUI/10_Cmb_Tree/cmb_tree/: Cargo.toml
Capitolo_10_GUI/10_Cmb_semplice/cmb_semplice/: Cargo.toml
Capitolo_TMP/com_dlg/: Cargo.toml
Capitolo_TMP/com_dlg/src/: main.rs
Capitolo_TMP/tmp/: Cargo.toml
Capitolo_TMP/tmp/src/: main.rs
NATIVE_WINDOWS_GUI/Capitolo_03_BASIC/basic/: Cargo.toml
TUTORIAL_READ_ME/: README_10_ANALISI_CMB.txt  README_N01_RUST_PROGETTI_TUTORIAL.md  README_N02_MODELLI_DI_CODICE.md
examples/: esegui_exe.rs  guessing_game.rs
src/: main.rs  main2.rs  main_derive.rs  seconda_gui.rs
(+8 files in other folders)
