[package]
name = "rust_progetti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
rand = "0.8.4"
call_exe={path="Capitolo_01/call_exe"}
guessing_game={path="Capitolo_02/guessing_game"}
data_type={path="Capitolo_03/data_type"}
