[package]
name = "rust_progetti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
rand = "0.8.4"
call_exe={path="Capitolo_01/call_exe"}
guessing_game={path="Capitolo_02/guessing_game"}
data_type={path="Capitolo_03/data_type"}
function={path="Capitolo_03/function"}
progetto_loop={path="Capitolo_03/progetto_loop"} #button 05
variables_and_mutability={path="Capitolo_03/variables_and_mutability"} #button 06

#capitolo 04----------------------
#sistemati:
dangle={path="Capitolo_04/dangle"} #button 07 - c:\CASA\PROGRAMMI\RUST_PROGETTI\Capitolo_04\dangle\
ownership={path="Capitolo_04/ownership"} #button 08 - c:\CASA\PROGRAMMI\RUST_PROGETTI\Capitolo_04\ownership\
references_and_borrowing={path="Capitolo_04/references_and_borrowing"} #button 09 - c:\CASA\PROGRAMMI\RUST_PROGETTI\Capitolo_04\references_and_borrowing\


the_slice_type={path="Capitolo_04/the_slice_type"} #button 10 - c:\CASA\PROGRAMMI\RUST_PROGETTI\Capitolo_04\the_slice_type\

